force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <label>Assessment</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>