force-app/main/default/objects/Assessment__c/fields/Assements_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Assements_Scheduled_Time__c</fullName>
    <description>Scheduled time field on Assements records</description>
    <label>Scheduled Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>