force-app/main/default/objects/Assessment__c/fields/Assessments_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assessments_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup detail to Contact on Assessments record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>