force-app/main/default/objects/Assessment__c/fields/Examinee__c.field-meta.xml
<CustomField>
    <fullName>Examinee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examinee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>