force-app/main/default/objects/Assessment__c/listViews/All_Assessments.listView-meta.xml
<ListView>
    <fullName>All_Assessments</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Assessments</label>
</ListView>