force-app/main/default/objects/Assessment__c/listViews/Assessment_to_be_approved_Assessment.listView-meta.xml
<ListView>
    <fullName>Assessment_to_be_approved_Assessment</fullName>
    <filterScope>Queue</filterScope>
    <label>Assessment to be approved</label>
    <queue>Assessment_to_be_approved</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>